fixed a few alignment issues

--- a/style.css
+++ b/style.css
@@ -2,48 +2,81 @@
     margin: 0;
     padding: 0;
 }
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: top;
+
+body {
+    font-family: 'Roboto', sans-serif;
 }
-.nav-bar{
+
+h1 {
+    margin-top: 25px;
+}
+
+h3 {
+    margin-top: 15px;
+}
+
+h4 {
+    color: gray;
+}
+
+p {
+    margin-top: 15px;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+/* nav bar */
+
+.nav-bar {
     background-color: black;
     color: white;
     display: flex;
-    align-items: center;
+    justify-content: space-between;
     padding: 10px;
+    margin: 0 auto;
 }
-.main{
+
+.sign-out {
+    background-color: teal;
+    color: white;
+    margin-right: 290px;
+    padding: 5px 15px;
+    font-size: 20px;
+} 
+
+#menu {
+    display: flex;
+    align-items: center;
+}
+
+/* main container */
+
+.main-container { 
+    display: flex;
+    justify-content: center;
+    align-items: top;
+    margin: 0 auto;
+}
+
+/* left (top = user card, bottom = education) */
+
+.left-container {
     flex: 3;
     margin-left: 300px;
 }
-.card-header{
+
+.card-header {
     height: 100px;
     background-color: teal;
     margin-top: 20px;
 }
-.card-body, .main2-body{
-    flex-direction: column;
-    border-left: gray;
-    border-bottom: gray;
-    border-right: gray;
-    border-style: solid;
-    border-top: none;
-    padding: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
-}
-.sign-out{
-    background-color: teal;
-    color: white;
-    position:fixed;
-    right: 300px;
-    padding: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    font-size: 20px;
-}
-.prof_pic{
+
+.prof_pic {
     border-radius: 50%;
     background-color: #fff;
     height: 75px;
@@ -53,120 +86,136 @@
     margin-bottom: 100px;
     border: 2px solid #999;
 }
-.map-marker{
-    width: 12px;
+
+.map-marker {
+    height: 24px;
+    margin-right: 10px;
+    margin-top: 10px;
 }
-#location{
-    vertical-align: middle;
+
+#location {
+    display: flex;
+    align-items: center;
 }
-.gear{
+
+.gear {
     width: 12px;
     display: flex;
     display: inline;
     color: blue;
     margin-top: 15px;
+    margin-right: 10px;
 }
-.blue{
+
+.blue {
     color: blue;
     text-decoration: underline;
     margin-left: -10px;
 }
-.nav{
-    margin-right: 300px;
-    flex: 2;
-}
-.nav1-header, .nav2-header{
-    background-color: black;
-    color: white;
-    margin-left: 20px;
-    height: 20px;
-    margin-top: 20px;
-    padding: 20px;
-    
-}
-.main2-header{
-    background-color: black;
-    color: white;
-    height: 20px;
-    margin-top: 20px;
-    padding: 20px;
-}
-.nav1-body, .nav2-body{
+
+/* right (top = connection requests, bottom = your connections) */
+
+.card-body, .education-body {
+    flex-direction: column;
     border-left: gray;
+    border-bottom: gray;
     border-right: gray;
     border-style: solid;
     border-top: none;
     padding: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
+}
+
+.education-header {
+    background-color: black;
+    color: white;
+    height: 20px;
+    margin-top: 20px;
+    padding: 20px;
+}
+
+.right-container {
+    margin-right: 300px;
+    flex: 2;
+}
+
+.title {
+    margin-bottom: 12px;
+    font-size: 24px;
+}
+.request-header, .connections-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: black;
+    color: white;
+    margin-left: 20px;
+    height: 20px;
+    margin-top: 20px;
+    padding: 20px;    
+}
+
+.request-body, .connections-body{
+    border-left: gray;
+    border-right: gray;
+    border-style: solid;
+    border-top: none;
     margin-left: 20px;
 }
-.footer{
+
+#req1, #req2 {
+    display: flex;
     padding: 20px;
-    border-top: 2px solid gray;
 }
-.nav-title{
+
+.header-title {
     vertical-align: middle;
     font-size: 25px;
+    background-color: gray;
+    border-radius: 15px;
 }
-.main-title{
-    vertical-align: middle;
-    font-size: 25px;
-}
-.photo{
+
+.photo {
     width: 40px;
     border-radius: 50%;
     border-style: solid;
     background-color: #fff;
     margin-right: 15px;
 }
-.circle{
+
+.circle {
     width: 40px;
-    margin-left: 20px;
-    
+    margin-left: 20px;    
 }  
-h1{
-    margin-top: 25px;
-}
-h3{
-    margin-top: 15px;
-}
-h4{
-    color: gray;
-}
-p{
-    margin-top: 15px;
-}
-a{
-    color: white;
-    text-decoration: none;
-    margin-left: 20px;
-    margin-right: 20px;
-}
+
 .large-text{
     margin-left: 290px;
     font-size: 35px;
 }
-.con-req{
+
+.con-req {
     display: inline-flex;
     align-items: center;
     justify-content: flex-start;
     margin-right: 40px;
     font-size: 24px; 
 }
-.choice{
-    display: inline-block;
-    align-items: flex-end;
-    font-size: 24px;
-    margin-left: 20px;
-    justify-content: flex-end;
 
-}
-.your-connections{
+.choice {
     display: flex;
     align-items: center;
     font-size: 24px;
-    padding: 10px;
-
+    /* margin-left: 20px;     */
 }
-body{
-    font-family: 'Roboto', sans-serif;
+
+.your-connections {
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+    padding: 20px;
+}
+
+.footer {
+    padding: 20px;
+    border-top: 2px solid gray;
 }
